# evolver

./: .coverage  .env  .env.example  .evolve-prompt.md  .gitignore  .kaizen-secret-ignore  CHANGELOG.md  DESIGN.md  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.tsbuildinfo  turbo.json  vitest.config.ts
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  router.py  schemas.py  services.py
apps/admin/: package.json  vitest.config.ts
apps/api/: package.json  (+2 more)
docs/: LAST_AUDIT.md
drizzle/: 0000_steep_silver_centurion.sql  0001_giant_squirrel_girl.sql  0002_happy_mathemanic.sql  0003_calm_crimson_falcon.sql  0004_add_circuit_open_unique_index.sql
e2e/: package.json  playwright.config.ts
hookrelay/: .env.example  .gitignore  package.json  tsconfig.json
scripts/: merge-coverage.mjs
shiplens/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  turbo.json
tests/: conftest.py  test_api.py  test_break_loop_comprehensive.py  test_commit_blocking_errors.py  test_comprehensive.py  test_comprehensive_errors.py  test_comprehensive_final.py  test_database.py  test_deep_behavior.py  test_edge_cases_advanced.py  test_gitignore.py  test_integration_break_loop.py  test_loop_break_comprehensive.py  test_main.py  test_models.py  test_router.py  test_router_extra.py  test_schemas.py  test_schemas_extra.py  test_security.py  test_security_extra.py  test_services.py  test_services_extra.py
(+372 files in other folders)
